// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select_into.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 60,
                "relname": "onek",
                "relpersistence": "p",
              },
            },
          ],
          "intoClause": {
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 45,
              "relname": "sitmp1",
              "relpersistence": "p",
            },
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 29,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 29,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "onek",
                      },
                    },
                    {
                      "String": {
                        "sval": "unique1",
                      },
                    },
                  ],
                  "location": 74,
                },
              },
              "location": 87,
              "name": [
                {
                  "String": {
                    "sval": "<",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 2,
                  },
                  "location": 89,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "sitmp1",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 11 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 40,
                "relname": "onek2",
                "relpersistence": "p",
              },
            },
          ],
          "intoClause": {
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 25,
              "relname": "sitmp1",
              "relpersistence": "p",
            },
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "onek2",
                      },
                    },
                    {
                      "String": {
                        "sval": "unique1",
                      },
                    },
                  ],
                  "location": 55,
                },
              },
              "location": 69,
              "name": [
                {
                  "String": {
                    "sval": "<",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 2,
                  },
                  "location": 71,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "sitmp1",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateSchemaStmt": {
          "schemaname": "selinto_schema",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 23 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateRoleStmt": {
          "role": "regress_selinto_user",
          "stmt_type": "ROLESTMT_USER",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 24 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterDefaultPrivilegesStmt": {
          "action": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 88,
                  "rolename": "regress_selinto_user",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "privileges": [
              {
                "AccessPriv": {
                  "priv_name": "insert",
                },
              },
            ],
            "targtype": "ACL_TARGET_DEFAULTS",
          },
          "options": [
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "RoleSpec": {
                          "location": 35,
                          "rolename": "regress_selinto_user",
                          "roletype": "ROLESPEC_CSTRING",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "roles",
                "location": 26,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 26 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "GrantStmt": {
          "behavior": "DROP_RESTRICT",
          "grantees": [
            {
              "RoleSpec": {
                "location": 39,
                "roletype": "ROLESPEC_PUBLIC",
              },
            },
          ],
          "is_grant": true,
          "objects": [
            {
              "String": {
                "sval": "selinto_schema",
              },
            },
          ],
          "objtype": "OBJECT_SCHEMA",
          "targtype": "ACL_TARGET_OBJECT",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 27 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 28,
                "sval": {
                  "sval": "regress_selinto_user",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "session_authorization",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "colNames": [
              {
                "String": {
                  "sval": "a",
                },
              },
            ],
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 36,
              "relname": "tbl_withdata1",
              "relpersistence": "p",
              "schemaname": "selinto_schema",
            },
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 81,
                    "val": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "ival": {
                                "ival": 1,
                              },
                              "location": 97,
                            },
                          },
                          {
                            "A_Const": {
                              "ival": {
                                "ival": 3,
                              },
                              "location": 99,
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "generate_series",
                            },
                          },
                        ],
                        "location": 81,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 32 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "tbl_withdata1",
            "relpersistence": "p",
            "schemaname": "selinto_schema",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 50,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "analyze",
                "location": 10,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 19,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "summary",
                "location": 30,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "timing",
                "location": 43,
              },
            },
          ],
          "query": {
            "CreateTableAsStmt": {
              "into": {
                "colNames": [
                  {
                    "String": {
                      "sval": "a",
                    },
                  },
                ],
                "onCommit": "ONCOMMIT_NOOP",
                "rel": {
                  "inh": true,
                  "location": 70,
                  "relname": "tbl_withdata2",
                  "relpersistence": "p",
                  "schemaname": "selinto_schema",
                },
              },
              "objtype": "OBJECT_TABLE",
              "query": {
                "SelectStmt": {
                  "limitOption": "LIMIT_OPTION_DEFAULT",
                  "op": "SETOP_NONE",
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 115,
                        "val": {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 131,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 3,
                                  },
                                  "location": 133,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "generate_series",
                                },
                              },
                            ],
                            "location": 115,
                          },
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "colNames": [
              {
                "String": {
                  "sval": "a",
                },
              },
            ],
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 39,
              "relname": "tbl_nodata1",
              "relpersistence": "p",
              "schemaname": "selinto_schema",
            },
            "skipData": true,
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 82,
                    "val": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "ival": {
                                "ival": 1,
                              },
                              "location": 98,
                            },
                          },
                          {
                            "A_Const": {
                              "ival": {
                                "ival": 3,
                              },
                              "location": 100,
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "generate_series",
                            },
                          },
                        ],
                        "location": 82,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 39 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "analyze",
                "location": 10,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 19,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "summary",
                "location": 30,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "timing",
                "location": 43,
              },
            },
          ],
          "query": {
            "CreateTableAsStmt": {
              "into": {
                "colNames": [
                  {
                    "String": {
                      "sval": "a",
                    },
                  },
                ],
                "onCommit": "ONCOMMIT_NOOP",
                "rel": {
                  "inh": true,
                  "location": 70,
                  "relname": "tbl_nodata2",
                  "relpersistence": "p",
                  "schemaname": "selinto_schema",
                },
                "skipData": true,
              },
              "objtype": "OBJECT_TABLE",
              "query": {
                "SelectStmt": {
                  "limitOption": "LIMIT_OPTION_DEFAULT",
                  "op": "SETOP_NONE",
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 113,
                        "val": {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 129,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 3,
                                  },
                                  "location": 131,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "generate_series",
                                },
                              },
                            ],
                            "location": 113,
                          },
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 42 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "name": "data_sel",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 62,
                    "val": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "ival": {
                                "ival": 1,
                              },
                              "location": 78,
                            },
                          },
                          {
                            "A_Const": {
                              "ival": {
                                "ival": 3,
                              },
                              "location": 80,
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "generate_series",
                            },
                          },
                        ],
                        "location": 62,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "colNames": [
              {
                "String": {
                  "sval": "a",
                },
              },
            ],
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 14,
              "relname": "tbl_withdata3",
              "relpersistence": "p",
              "schemaname": "selinto_schema",
            },
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "ExecuteStmt": {
              "name": "data_sel",
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 46 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "analyze",
                "location": 10,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 19,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "summary",
                "location": 30,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "timing",
                "location": 43,
              },
            },
          ],
          "query": {
            "CreateTableAsStmt": {
              "into": {
                "colNames": [
                  {
                    "String": {
                      "sval": "a",
                    },
                  },
                ],
                "onCommit": "ONCOMMIT_NOOP",
                "rel": {
                  "inh": true,
                  "location": 70,
                  "relname": "tbl_withdata4",
                  "relpersistence": "p",
                  "schemaname": "selinto_schema",
                },
              },
              "objtype": "OBJECT_TABLE",
              "query": {
                "ExecuteStmt": {
                  "name": "data_sel",
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 49 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "colNames": [
              {
                "String": {
                  "sval": "a",
                },
              },
            ],
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 51,
              "relname": "tbl_nodata3",
              "relpersistence": "p",
              "schemaname": "selinto_schema",
            },
            "skipData": true,
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "ExecuteStmt": {
              "name": "data_sel",
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 52 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "analyze",
                "location": 10,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 19,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "summary",
                "location": 30,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "timing",
                "location": 43,
              },
            },
          ],
          "query": {
            "CreateTableAsStmt": {
              "into": {
                "colNames": [
                  {
                    "String": {
                      "sval": "a",
                    },
                  },
                ],
                "onCommit": "ONCOMMIT_NOOP",
                "rel": {
                  "inh": true,
                  "location": 70,
                  "relname": "tbl_nodata4",
                  "relpersistence": "p",
                  "schemaname": "selinto_schema",
                },
                "skipData": true,
              },
              "objtype": "OBJECT_TABLE",
              "query": {
                "ExecuteStmt": {
                  "name": "data_sel",
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 55 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "kind": "VAR_RESET",
          "name": "session_authorization",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 56 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterDefaultPrivilegesStmt": {
          "action": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 86,
                  "rolename": "regress_selinto_user",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "is_grant": true,
            "objtype": "OBJECT_TABLE",
            "privileges": [
              {
                "AccessPriv": {
                  "priv_name": "insert",
                },
              },
            ],
            "targtype": "ACL_TARGET_DEFAULTS",
          },
          "options": [
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "RoleSpec": {
                          "location": 36,
                          "rolename": "regress_selinto_user",
                          "roletype": "ROLESPEC_CSTRING",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "roles",
                "location": 27,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 59 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 28,
                "sval": {
                  "sval": "regress_selinto_user",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "session_authorization",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 61 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "kind": "VAR_RESET",
          "name": "session_authorization",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 62 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeallocateStmt": {
          "name": "data_sel",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 64 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_CASCADE",
          "objects": [
            {
              "String": {
                "sval": "selinto_schema",
              },
            },
          ],
          "removeType": "OBJECT_SCHEMA",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 65 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropRoleStmt": {
          "roles": [
            {
              "RoleSpec": {
                "location": 11,
                "rolename": "regress_selinto_user",
                "roletype": "ROLESPEC_CSTRING",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 66 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 69,
            "relname": "ctas_base",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 80,
                "typeName": {
                  "location": 82,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "j",
                "is_local": true,
                "location": 87,
                "typeName": {
                  "location": 89,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 69 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "ctas_base",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 31,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 34,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 70 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "colNames": [
              {
                "String": {
                  "sval": "ii",
                },
              },
              {
                "String": {
                  "sval": "jj",
                },
              },
              {
                "String": {
                  "sval": "kk",
                },
              },
            ],
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 14,
              "relname": "ctas_nodata",
              "relpersistence": "p",
            },
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 59,
                    "relname": "ctas_base",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 49,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "i",
                            },
                          },
                        ],
                        "location": 49,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 52,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "j",
                            },
                          },
                        ],
                        "location": 52,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 70 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "colNames": [
              {
                "String": {
                  "sval": "ii",
                },
              },
              {
                "String": {
                  "sval": "jj",
                },
              },
              {
                "String": {
                  "sval": "kk",
                },
              },
            ],
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 23,
              "relname": "ctas_nodata",
              "relpersistence": "p",
            },
            "skipData": true,
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 68,
                    "relname": "ctas_base",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 58,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "i",
                            },
                          },
                        ],
                        "location": 58,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 61,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "j",
                            },
                          },
                        ],
                        "location": 61,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 71 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "colNames": [
              {
                "String": {
                  "sval": "ii",
                },
              },
              {
                "String": {
                  "sval": "jj",
                },
              },
            ],
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 23,
              "relname": "ctas_nodata",
              "relpersistence": "p",
            },
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 64,
                    "relname": "ctas_base",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 54,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "i",
                            },
                          },
                        ],
                        "location": 54,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 57,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "j",
                            },
                          },
                        ],
                        "location": 57,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 72 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "colNames": [
              {
                "String": {
                  "sval": "ii",
                },
              },
              {
                "String": {
                  "sval": "jj",
                },
              },
            ],
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 20,
              "relname": "ctas_nodata_2",
              "relpersistence": "p",
            },
            "skipData": true,
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 63,
                    "relname": "ctas_base",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 53,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "i",
                            },
                          },
                        ],
                        "location": 53,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 56,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "j",
                            },
                          },
                        ],
                        "location": 56,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 73 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "colNames": [
              {
                "String": {
                  "sval": "ii",
                },
              },
            ],
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 20,
              "relname": "ctas_nodata_3",
              "relpersistence": "p",
            },
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 59,
                    "relname": "ctas_base",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 49,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "i",
                            },
                          },
                        ],
                        "location": 49,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 52,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "j",
                            },
                          },
                        ],
                        "location": 52,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 74 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "colNames": [
              {
                "String": {
                  "sval": "ii",
                },
              },
            ],
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 20,
              "relname": "ctas_nodata_4",
              "relpersistence": "p",
            },
            "skipData": true,
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 59,
                    "relname": "ctas_base",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 49,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "i",
                            },
                          },
                        ],
                        "location": 49,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 52,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "j",
                            },
                          },
                        ],
                        "location": 52,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 75 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 21,
                "relname": "ctas_nodata",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 77 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 15,
                "relname": "ctas_nodata_2",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 78 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 15,
                "relname": "ctas_nodata_3",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 79 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 15,
                "relname": "ctas_nodata_4",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 80 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "ctas_base",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 81 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "ctas_nodata",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 82 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "ctas_nodata_2",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 83 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "ctas_nodata_3",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 84 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "ctas_nodata_4",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 85 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateFunctionStmt": {
          "funcname": [
            {
              "String": {
                "sval": "make_table",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "
  CREATE TABLE created_table AS SELECT * FROM int8_tbl;
",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 152,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "sql",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "language",
                "location": 217,
              },
            },
          ],
          "returnType": {
            "location": 147,
            "names": [
              {
                "String": {
                  "sval": "void",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 94 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "FuncCall": {
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "make_table",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 96 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 16,
                "relname": "created_table",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 98 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DoStmt": {
          "args": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "
BEGIN
	EXECUTE 'EXPLAIN ANALYZE SELECT * INTO TABLE easi FROM int8_tbl';
	EXECUTE 'EXPLAIN ANALYZE CREATE TABLE easi2 AS SELECT * FROM int8_tbl WITH NO DATA';
END",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 142,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 106 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "created_table",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 108 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "easi",
                    },
                  },
                ],
              },
            },
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "easi2",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 109 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "foo",
          "query": {
            "SelectStmt": {
              "intoClause": {
                "onCommit": "ONCOMMIT_NOOP",
                "rel": {
                  "inh": true,
                  "location": 101,
                  "relname": "int4_tbl",
                  "relpersistence": "p",
                },
              },
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 94,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 94,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 114 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CopyStmt": {
          "filename": "blob",
          "query": {
            "SelectStmt": {
              "larg": {
                "intoClause": {
                  "onCommit": "ONCOMMIT_NOOP",
                  "rel": {
                    "inh": true,
                    "location": 21,
                    "relname": "frak",
                    "relpersistence": "p",
                  },
                },
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 14,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 14,
                        },
                      },
                    },
                  },
                ],
              },
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_UNION",
              "rarg": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 39,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 39,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 115 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeSubselect": {
                "alias": {
                  "aliasname": "bar",
                },
                "subquery": {
                  "SelectStmt": {
                    "intoClause": {
                      "onCommit": "ONCOMMIT_NOOP",
                      "rel": {
                        "inh": true,
                        "location": 30,
                        "relname": "f",
                        "relpersistence": "p",
                      },
                    },
                    "limitOption": "LIMIT_OPTION_DEFAULT",
                    "op": "SETOP_NONE",
                    "targetList": [
                      {
                        "ResTarget": {
                          "location": 23,
                          "val": {
                            "A_Const": {
                              "ival": {
                                "ival": 1,
                              },
                              "location": 23,
                            },
                          },
                        },
                      },
                    ],
                  },
                },
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 116 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ViewStmt": {
          "query": {
            "SelectStmt": {
              "intoClause": {
                "onCommit": "ONCOMMIT_NOOP",
                "rel": {
                  "inh": true,
                  "location": 34,
                  "relname": "int4_tbl",
                  "relpersistence": "p",
                },
              },
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 27,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 27,
                      },
                    },
                  },
                },
              ],
            },
          },
          "view": {
            "inh": true,
            "location": 13,
            "relname": "foo",
            "relpersistence": "p",
          },
          "withCheckOption": "NO_CHECK_OPTION",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 117 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "int4_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "intoClause": {
                "onCommit": "ONCOMMIT_NOOP",
                "rel": {
                  "inh": true,
                  "location": 36,
                  "relname": "f",
                  "relpersistence": "p",
                },
              },
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 29,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 29,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 118 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 57,
              "relname": "ctas_ine_tbl",
              "relpersistence": "p",
            },
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 80,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 80,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 121 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 14,
              "relname": "ctas_ine_tbl",
              "relpersistence": "p",
            },
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 37,
                    "val": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 37,
                          },
                        },
                        "location": 39,
                        "name": [
                          {
                            "String": {
                              "sval": "/",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "ival": {},
                            "location": 41,
                          },
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 121 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "if_not_exists": true,
          "into": {
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 37,
              "relname": "ctas_ine_tbl",
              "relpersistence": "p",
            },
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 60,
                    "val": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 60,
                          },
                        },
                        "location": 62,
                        "name": [
                          {
                            "String": {
                              "sval": "/",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "ival": {},
                            "location": 64,
                          },
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 122 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 20,
              "relname": "ctas_ine_tbl",
              "relpersistence": "p",
            },
            "skipData": true,
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 43,
                    "val": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 43,
                          },
                        },
                        "location": 45,
                        "name": [
                          {
                            "String": {
                              "sval": "/",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "ival": {},
                            "location": 47,
                          },
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 123 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "if_not_exists": true,
          "into": {
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 37,
              "relname": "ctas_ine_tbl",
              "relpersistence": "p",
            },
            "skipData": true,
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 60,
                    "val": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 60,
                          },
                        },
                        "location": 62,
                        "name": [
                          {
                            "String": {
                              "sval": "/",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "ival": {},
                            "location": 64,
                          },
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 124 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "analyze",
                "location": 16,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 25,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "summary",
                "location": 36,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "timing",
                "location": 49,
              },
            },
          ],
          "query": {
            "CreateTableAsStmt": {
              "into": {
                "onCommit": "ONCOMMIT_NOOP",
                "rel": {
                  "inh": true,
                  "location": 76,
                  "relname": "ctas_ine_tbl",
                  "relpersistence": "p",
                },
              },
              "objtype": "OBJECT_TABLE",
              "query": {
                "SelectStmt": {
                  "limitOption": "LIMIT_OPTION_DEFAULT",
                  "op": "SETOP_NONE",
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 99,
                        "val": {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 99,
                              },
                            },
                            "location": 101,
                            "name": [
                              {
                                "String": {
                                  "sval": "/",
                                },
                              },
                            ],
                            "rexpr": {
                              "A_Const": {
                                "ival": {},
                                "location": 103,
                              },
                            },
                          },
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 126 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "analyze",
                "location": 19,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 28,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "summary",
                "location": 39,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "timing",
                "location": 52,
              },
            },
          ],
          "query": {
            "CreateTableAsStmt": {
              "if_not_exists": true,
              "into": {
                "onCommit": "ONCOMMIT_NOOP",
                "rel": {
                  "inh": true,
                  "location": 93,
                  "relname": "ctas_ine_tbl",
                  "relpersistence": "p",
                },
              },
              "objtype": "OBJECT_TABLE",
              "query": {
                "SelectStmt": {
                  "limitOption": "LIMIT_OPTION_DEFAULT",
                  "op": "SETOP_NONE",
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 116,
                        "val": {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 116,
                              },
                            },
                            "location": 118,
                            "name": [
                              {
                                "String": {
                                  "sval": "/",
                                },
                              },
                            ],
                            "rexpr": {
                              "A_Const": {
                                "ival": {},
                                "location": 120,
                              },
                            },
                          },
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 128 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "analyze",
                "location": 16,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 25,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "summary",
                "location": 36,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "timing",
                "location": 49,
              },
            },
          ],
          "query": {
            "CreateTableAsStmt": {
              "into": {
                "onCommit": "ONCOMMIT_NOOP",
                "rel": {
                  "inh": true,
                  "location": 76,
                  "relname": "ctas_ine_tbl",
                  "relpersistence": "p",
                },
                "skipData": true,
              },
              "objtype": "OBJECT_TABLE",
              "query": {
                "SelectStmt": {
                  "limitOption": "LIMIT_OPTION_DEFAULT",
                  "op": "SETOP_NONE",
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 99,
                        "val": {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 99,
                              },
                            },
                            "location": 101,
                            "name": [
                              {
                                "String": {
                                  "sval": "/",
                                },
                              },
                            ],
                            "rexpr": {
                              "A_Const": {
                                "ival": {},
                                "location": 103,
                              },
                            },
                          },
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 130 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "analyze",
                "location": 19,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 28,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "summary",
                "location": 39,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "timing",
                "location": 52,
              },
            },
          ],
          "query": {
            "CreateTableAsStmt": {
              "if_not_exists": true,
              "into": {
                "onCommit": "ONCOMMIT_NOOP",
                "rel": {
                  "inh": true,
                  "location": 93,
                  "relname": "ctas_ine_tbl",
                  "relpersistence": "p",
                },
                "skipData": true,
              },
              "objtype": "OBJECT_TABLE",
              "query": {
                "SelectStmt": {
                  "limitOption": "LIMIT_OPTION_DEFAULT",
                  "op": "SETOP_NONE",
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 116,
                        "val": {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 116,
                              },
                            },
                            "location": 118,
                            "name": [
                              {
                                "String": {
                                  "sval": "/",
                                },
                              },
                            ],
                            "rexpr": {
                              "A_Const": {
                                "ival": {},
                                "location": 120,
                              },
                            },
                          },
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 132 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "name": "ctas_ine_query",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 40,
                    "val": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 40,
                          },
                        },
                        "location": 42,
                        "name": [
                          {
                            "String": {
                              "sval": "/",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "ival": {},
                            "location": 44,
                          },
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 134 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "analyze",
                "location": 10,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 19,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "summary",
                "location": 30,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "timing",
                "location": 43,
              },
            },
          ],
          "query": {
            "CreateTableAsStmt": {
              "into": {
                "onCommit": "ONCOMMIT_NOOP",
                "rel": {
                  "inh": true,
                  "location": 70,
                  "relname": "ctas_ine_tbl",
                  "relpersistence": "p",
                },
              },
              "objtype": "OBJECT_TABLE",
              "query": {
                "ExecuteStmt": {
                  "name": "ctas_ine_query",
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 135 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "analyze",
                "location": 19,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 28,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "summary",
                "location": 39,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "timing",
                "location": 52,
              },
            },
          ],
          "query": {
            "CreateTableAsStmt": {
              "if_not_exists": true,
              "into": {
                "onCommit": "ONCOMMIT_NOOP",
                "rel": {
                  "inh": true,
                  "location": 93,
                  "relname": "ctas_ine_tbl",
                  "relpersistence": "p",
                },
              },
              "objtype": "OBJECT_TABLE",
              "query": {
                "ExecuteStmt": {
                  "name": "ctas_ine_query",
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_into.sql > line 137 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "ctas_ine_tbl",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;
